# src/daemon/http/server.rs
@@ -22,15 +22,15 @@ use hyper::service::{make_service_fn, service_fn};
 use hyper::Method;
 
 use crate::commons::api::{
-    BgpStats, ChildHandle, CommandHistoryCriteria, Handle, ParentCaContact, ParentCaReq, ParentHandle, PublisherList,
+    BgpStats, ChildHandle, CommandHistoryCriteria, Handle, ParentCaContact, ParentHandle, PublisherList,
     RoaDefinitionUpdates, RtaName, Token,
 };
+use crate::commons::api::{ParentCaReq, RepositoryContact};
 use crate::commons::bgp::BgpAnalysisAdvice;
 use crate::commons::error::Error;
 use crate::commons::eventsourcing::AggregateStoreError;
 use crate::commons::remote::rfc8183;
 use crate::commons::util::file;
-use crate::commons::{actor::Actor, api::RepositoryContact};
 use crate::commons::{KrillEmptyResult, KrillResult};
 use crate::constants::{
     KRILL_ENV_UPGRADE_ONLY, KRILL_VERSION_MAJOR, KRILL_VERSION_MINOR, KRILL_VERSION_PATCH, NO_RESOURCE,
@@ -796,7 +796,6 @@ async fn api(req: Request) -> RoutingResult {
                     match restricted_endpoint {
                         Some("bulk") => api_bulk(req, &mut path).await,
                         Some("cas") => api_cas(req, &mut path).await,
-                        Some("publishers") => api_publishers(req, &mut path).await,
                         Some("pubd") => aa!(req, Permission::PUB_ADMIN, api_publication_server(req, &mut path).await),
                         _ => render_unknown_method(),
                     }
@@ -840,16 +839,13 @@ async fn api_cas(req: Request, path: &mut RequestPath) -> RoutingResult {
                     Method::DELETE => api_ca_delete(req, ca).await,
                     _ => render_unknown_method(),
                 },
-                Some("child_request.xml") => api_ca_child_req_xml(req, ca).await,
-                Some("child_request.json") => api_ca_child_req_json(req, ca).await,
                 Some("children") => api_ca_children(req, path, ca).await,
                 Some("history") => api_ca_history(req, path, ca).await,
-                Some("command") => api_ca_command_details(req, path, ca).await,
-                Some("id") => api_ca_regenerate_id(req, ca).await,
+
+                Some("id") => api_ca_id(req, path, ca).await,
                 Some("issues") => api_ca_issues(req, ca).await,
                 Some("keys") => api_ca_keys(req, path, ca).await,
                 Some("parents") => api_ca_parents(req, path, ca).await,
-                Some("parents-xml") => api_ca_add_parent_xml(req, path, ca).await,
                 Some("repo") => api_ca_repo(req, path, ca).await,
                 Some("routes") => api_ca_routes(req, path, ca).await,
                 Some("rta") => api_ca_rta(req, path, ca).await,
@@ -879,14 +875,14 @@ async fn api_ca_parents(req: Request, path: &mut RequestPath, ca: Handle) -> Rou
     if let Some(parent) = path.path_arg() {
         match *req.method() {
             Method::GET => api_ca_my_parent_contact(req, ca, parent).await,
-            Method::POST => api_ca_update_parent(req, ca, parent).await,
+            Method::POST => api_ca_parent_add_or_update(req, ca, Some(parent)).await,
             Method::DELETE => api_ca_remove_parent(req, ca, parent).await,
             _ => render_unknown_method(),
         }
     } else {
         match *req.method() {
             Method::GET => api_ca_my_parent_statuses(req, ca).await,
-            Method::POST => api_ca_add_parent(req, ca).await,
+            Method::POST => api_ca_parent_add_or_update(req, ca, None).await,
             _ => render_unknown_method(),
         }
     }
@@ -899,8 +895,6 @@ async fn api_ca_repo(req: Request, path: &mut RequestPath, ca: Handle) -> Routin
             Method::POST => api_ca_repo_update(req, ca).await,
             _ => render_unknown_method(),
         },
-        Some("request.json") => api_ca_publisher_req_json(req, ca).await,
-        Some("request.xml") => api_ca_publisher_req_xml(req, ca).await,
         Some("status") => api_ca_repo_status(req, ca).await,
         _ => render_unknown_method(),
     }
@@ -924,7 +918,9 @@ async fn api_ca_routes(req: Request, path: &mut RequestPath, ca: Handle) -> Rout
 
 async fn api_publication_server(req: Request, path: &mut RequestPath) -> RoutingResult {
     match path.next() {
-        None => match *req.method() {
+        Some("publishers") => api_publishers(req, path).await,
+        Some("stale") => api_stale_publishers(req, path.next()).await,
+        Some("init") => match *req.method() {
             Method::POST => {
                 let state = req.state.clone();
                 match req.json().await {
@@ -946,7 +942,7 @@ async fn api_publishers(req: Request, path: &mut RequestPath) -> RoutingResult {
                 None => api_show_pbl(req, publisher).await,
                 Some("response.xml") => api_repository_response_xml(req, publisher).await,
                 Some("response.json") => api_repository_response_json(req, publisher).await,
-                Some("stale") => api_stale_publishers(req, path.next()).await,
+
                 _ => render_unknown_method(),
             },
             None => api_list_pbl(req).await,
@@ -1159,12 +1155,19 @@ pub async fn api_ca_init(req: Request) -> RoutingResult {
     })
 }
 
-async fn api_ca_regenerate_id(req: Request, handle: Handle) -> RoutingResult {
+async fn api_ca_id(req: Request, path: &mut RequestPath, ca: Handle) -> RoutingResult {
     match *req.method() {
-        Method::POST => aa!(req, Permission::CA_UPDATE, handle.clone(), {
+        Method::POST => aa!(req, Permission::CA_UPDATE, ca.clone(), {
             let actor = req.actor();
-            render_empty_res(req.state().read().await.ca_update_id(handle, &actor).await)
+            render_empty_res(req.state().read().await.ca_update_id(ca, &actor).await)
         }),
+        Method::GET => match path.next() {
+            Some("child_request.xml") => api_ca_child_req_xml(req, ca).await,
+            Some("child_request.json") => api_ca_child_req_json(req, ca).await,
+            Some("publisher_request.json") => api_ca_publisher_req_json(req, ca).await,
+            Some("publisher_request.xml") => api_ca_publisher_req_xml(req, ca).await,
+            _ => render_unknown_method(),
+        },
         _ => render_unknown_method(),
     }
 }
@@ -1227,14 +1230,27 @@ async fn api_ca_children(req: Request, path: &mut RequestPath, ca: Handle) -> Ro
     }
 }
 
-async fn api_ca_history(req: Request, path: &mut RequestPath, handle: Handle) -> RoutingResult {
-    let crit = match parse_history_path(path) {
-        Some(crit) => crit,
-        None => return render_unknown_method(),
-    };
-
+async fn api_ca_history_commands(req: Request, path: &mut RequestPath, handle: Handle) -> RoutingResult {
     match *req.method() {
         Method::GET => aa!(req, Permission::CA_READ, handle.clone(), {
+            // /api/v1/cas/{ca}/history/commands  /<rows>/<offset>/<after>/<before>
+            let mut crit = CommandHistoryCriteria::default();
+
+            if let Some(rows) = path.path_arg() {
+                crit.set_rows(rows);
+            }
+
+            if let Some(offset) = path.path_arg() {
+                crit.set_offset(offset);
+            }
+
+            if let Some(after) = path.path_arg() {
+                crit.set_after(after);
+            }
+
+            if let Some(before) = path.path_arg() {
+                crit.set_before(before);
+            }
             match req.state().read().await.ca_history(&handle, crit).await {
                 Ok(history) => render_json(history),
                 Err(e) => render_error(e),
@@ -1244,39 +1260,12 @@ async fn api_ca_history(req: Request, path: &mut RequestPath, handle: Handle) ->
     }
 }
 
-fn parse_history_path(path: &mut RequestPath) -> Option<CommandHistoryCriteria> {
-    // /api/v1/cas/{ca}/history/short|full/<rows>/<offset>/<after>/<before>
-    let mut crit = CommandHistoryCriteria::default();
-
+async fn api_ca_history(req: Request, path: &mut RequestPath, ca: Handle) -> RoutingResult {
     match path.next() {
-        Some("short") => crit.set_excludes(&["cmd-ca-publish"]),
-        Some("full") => {}
-        _ => return None,
-    };
-
-    if let Some(rows) = path.path_arg() {
-        crit.set_rows(rows);
-    } else {
-        return Some(crit);
+        Some("details") => api_ca_command_details(req, path, ca).await,
+        Some("commands") => api_ca_history_commands(req, path, ca).await,
+        _ => render_unknown_method(),
     }
-
-    if let Some(offset) = path.path_arg() {
-        crit.set_offset(offset);
-    } else {
-        return Some(crit);
-    }
-
-    if let Some(after) = path.path_arg() {
-        crit.set_after(after);
-    } else {
-        return Some(crit);
-    }
-
-    if let Some(before) = path.path_arg() {
-        crit.set_before(before);
-    }
-
-    Some(crit)
 }
 
 async fn api_ca_command_details(req: Request, path: &mut RequestPath, handle: Handle) -> RoutingResult {
@@ -1399,7 +1388,7 @@ fn extract_repository_contact(handle: &Handle, bytes: Bytes) -> Result<Repositor
     }
 }
 
-pub async fn api_ca_repo_update(req: Request, handle: Handle) -> RoutingResult {
+async fn api_ca_repo_update(req: Request, handle: Handle) -> RoutingResult {
     aa!(req, Permission::CA_UPDATE, handle.clone(), {
         let actor = req.actor();
         let server = req.state().clone();
@@ -1415,103 +1404,59 @@ pub async fn api_ca_repo_update(req: Request, handle: Handle) -> RoutingResult {
     })
 }
 
-async fn api_ca_add_parent(req: Request, ca: Handle) -> RoutingResult {
+async fn api_ca_parent_add_or_update(req: Request, ca: Handle, parent_override: Option<Handle>) -> RoutingResult {
     aa!(req, Permission::CA_UPDATE, ca.clone(), {
         let actor = req.actor();
         let server = req.state().clone();
-
-        let parent_req = match req.json().await {
-            Ok(req) => req,
-            Err(e) => return render_error(e),
-        };
-
-        match ca_parent_add(server, ca, parent_req, &actor).await {
-            Ok(()) => render_ok(),
-            Err(e) => render_error(e),
-        }
-    })
-}
-
-async fn api_ca_add_parent_xml(req: Request, path: &mut RequestPath, ca: Handle) -> RoutingResult {
-    aa!(req, Permission::CA_UPDATE, ca.clone(), {
-        let actor = req.actor();
-        let server = req.state().clone();
-
-        let parent = match path.path_arg() {
-            Some(parent) => parent,
-            None => return render_error(Error::ApiInvalidHandle),
-        };
 
         let bytes = match req.api_bytes().await {
             Ok(bytes) => bytes,
             Err(e) => return render_error(e),
         };
 
-        let string = match String::from_utf8(bytes.to_vec()).map_err(Error::custom) {
-            Ok(string) => string,
-            Err(e) => return render_error(e),
-        };
-
-        let parent_req = if string.starts_with("<repository") {
-            return render_error(Error::CaParentResponseWrongXml(ca));
-        } else {
-            let res = match rfc8183::ParentResponse::validate(string.as_bytes())
-                .map_err(|e| Error::CaParentResponseInvalidXml(ca.clone(), e.to_string()))
-            {
-                Ok(res) => res,
-                Err(e) => return render_error(e),
-            };
-            let contact = ParentCaContact::Rfc6492(res);
-
-            ParentCaReq::new(parent, contact)
-        };
-
-        match ca_parent_add(server, ca, parent_req, &actor).await {
-            Ok(()) => render_ok(),
+        match extract_parent_ca_req(&ca, bytes, parent_override) {
+            Ok(parent_req) => render_empty_res(
+                server
+                    .read()
+                    .await
+                    .ca_parent_add_or_update(ca, parent_req, &actor)
+                    .await,
+            ),
             Err(e) => render_error(e),
         }
     })
 }
 
-async fn ca_parent_add(server: State, ca: Handle, parent_req: ParentCaReq, actor: &Actor) -> Result<(), Error> {
-    server.read().await.ca_parent_add(ca, parent_req, actor).await
-}
-
-fn extract_parent_ca_contact(ca: &Handle, bytes: Bytes) -> Result<ParentCaContact, Error> {
+fn extract_parent_ca_req(ca: &Handle, bytes: Bytes, parent_override: Option<Handle>) -> Result<ParentCaReq, Error> {
     let string = String::from_utf8(bytes.to_vec()).map_err(Error::custom)?;
 
     // TODO: Switch based on Content-Type header
-    if string.starts_with('<') {
+    let req = if string.starts_with('<') {
         if string.starts_with("<repository") {
-            Err(Error::CaParentResponseWrongXml(ca.clone()))
+            return Err(Error::CaParentResponseWrongXml(ca.clone()));
         } else {
             let res = rfc8183::ParentResponse::validate(string.as_bytes())
                 .map_err(|e| Error::CaParentResponseInvalidXml(ca.clone(), e.to_string()))?;
-            Ok(ParentCaContact::Rfc6492(res))
+
+            let parent_name = parent_override.unwrap_or_else(|| res.parent_handle().clone());
+            let contact = ParentCaContact::for_rfc6492(res);
+            ParentCaReq::new(parent_name, contact)
         }
     } else {
-        serde_json::from_str(&string).map_err(Error::JsonError)
-    }
-}
-
-async fn api_ca_update_parent(req: Request, ca: Handle, parent: ParentHandle) -> RoutingResult {
-    aa!(req, Permission::CA_UPDATE, ca.clone(), {
-        let actor = req.actor();
-        let server = req.state().clone();
-
-        let bytes = match req.api_bytes().await {
-            Ok(bytes) => bytes,
-            Err(e) => return render_error(e),
-        };
-
-        match extract_parent_ca_contact(&ca, bytes) {
-            Ok(contact) => {
-                let res = server.read().await.ca_parent_update(ca, parent, contact, &actor).await;
-                render_empty_res(res)
+        let req: ParentCaReq = serde_json::from_str(&string).map_err(Error::JsonError)?;
+        if let Some(parent_override) = parent_override {
+            if req.handle() != &parent_override {
+                return Err(Error::Custom(format!(
+                    "Used different parent names on path ({}) and submitted JSON ({}) for adding/updating a parent",
+                    parent_override,
+                    req.handle()
+                )));
             }
-            Err(e) => render_error(e),
         }
-    })
+        req
+    };
+
+    Ok(req)
 }
 
 async fn api_ca_remove_parent(req: Request, ca: Handle, parent: Handle) -> RoutingResult {
